--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -14,23 +14,20 @@
         "level": "Trình độ",
         "experience": "Kinh nghiệm",
         "gender": "Giới tính",
-        "mail": "Thư điện tử",
-        "phone": "Điện thoại",
+        "email": "Email",
+        "phone": "Phone",
         "male": "Nam",
         "female": "Nữ",
         "month": "tháng",
-        "info_link": "Thông tin chi tiết",
+        "info_link": "Link",
         "year": "năm",
         "null": "Không có",
         "sort_by": "Sắp xếp",
-        "sort_by_name": "Theo tên",
-        "sort_by_price": "Theo giá",
-        "sort_by_level": "Theo trình độ",
-        "sort_by_exp": "Theo kinh nghiệm",
-        "sort_by_star": "Theo số sao",
+        "_search_name": "Tìm theo tên",
         "filter": "Lọc",
         "teach_method": "Hình thức dạy",
         "certificate": "Chứng chỉ",
+        "star_average": "Số sao",
         "back": "Quay lại",
         "reject": "Từ chối",
         "rating": "Đánh giá sao",
@@ -43,6 +40,7 @@
         "slider_note2":"Hệ thống gia sư chất lượng được đánh giá cao",
         "slider_note3": "Tìm kiếm gia sư ngay thôi nào",
         "reject_student": "Gia sư đã từ chối yêu cầu của bạn",
-        "allow_student": "Gia sư đồng ý yêu cầu của bạn"
+        "allow_student": "Gia sư đồng ý yêu cầu của bạn",
+        "footer_intro": "Chúng tôi là チーちゃん, chuyên cung cấp dịch vụ, nền tảng công nghệ tốt nhất cho khách hàng."
     }
 }
