add auth hook and comments

--- a/src/locales/jp/translation.json
+++ b/src/locales/jp/translation.json
@@ -41,6 +41,9 @@
         "slider_note3": "家庭教師を探し始める",
         "reject_student": "家庭教師は申し出を断りました。",
         "allow_student": "家庭教師は提案に同意しました。",
-        "footer_intro": "私たちはチーちゃん会社であり、お客様に最高のサービスとテクノロジーを提供することに専念しています。"
+        "footer_intro": "私たちはチーちゃん会社であり、お客様に最高のサービスとテクノロジーを提供することに専念しています。",
+        "welcome_member": "SagaSuyのメンバーになって、おめでとうございました。",
+        "welcome": "こんにちは",
+        "error": "ちょっとエラーがあって、もう一度情報を確認して、待ってください。"
     }
 }
