--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -41,6 +41,9 @@
         "slider_note3": "Tìm kiếm gia sư ngay thôi nào",
         "reject_student": "Gia sư đã từ chối yêu cầu của bạn",
         "allow_student": "Gia sư đồng ý yêu cầu của bạn",
-        "footer_intro": "Chúng tôi là チーちゃん, chuyên cung cấp dịch vụ, nền tảng công nghệ tốt nhất cho khách hàng."
+        "footer_intro": "Chúng tôi là チーちゃん, chuyên cung cấp dịch vụ, nền tảng công nghệ tốt nhất cho khách hàng.",
+        "welcome_member": "Bạn đã trở thành thành viên của cộng đồng Sagasuy",
+        "welcome": "Xin chào",
+        "error": "Có lỗi đang xảy ra. Vui lòng kiểm tra lại thông tin hoặc chờ trong giây lát"
     }
 }
