--- a/src/locales/jp/translation.json
+++ b/src/locales/jp/translation.json
@@ -49,6 +49,10 @@
         "welcome": "こんにちは",
         "goodbye": "ご使用していただきありがとうございます",
         "welcome_member": "SagaSuyのメンバーになって、おめでとうございました。",
-        "error": "ちょっとエラーがあって、もう一度情報を確認して、待ってください。"
+        "error": "ちょっとエラーがあって、もう一度情報を確認して、待ってください。",
+        "create": "新しい情報を作りました",
+        "created_ok": "新しい情報を作りました",
+        "updated_ok": "情報を編集しました。",
+        "deleted_ok": "情報を消しました。"
     }
 }
