--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -2,6 +2,7 @@
     "content": {
         "login": "Đăng nhập",
         "signup": "Đăng ký",
+        "signup_date": "Ngày tham gia",
         "logout": "Thoát",
         "japanese": "Tiếng Nhật",
         "vietnamese": "Tiếng Việt",
@@ -43,15 +44,36 @@
         "reject_student": "Gia sư đã từ chối yêu cầu của bạn",
         "allow_student": "Gia sư đồng ý yêu cầu của bạn",
         "footer_intro": "Chúng tôi là チーちゃん, chuyên cung cấp dịch vụ, nền tảng công nghệ tốt nhất cho khách hàng.",
-        "distance": "Khoảng cách"
+        "distance": "Khoảng cách",
+        "go_back": "Quay lại",
+        "signup_wait": "Đang chờ",
+        "approve": "Thành công",
+        "refuse": "Đã bị từ chối",
+        "profile": "Thông tin của bạn",
+        "your_student": "Học sinh của bạn",
+        "student": "Học sinh",
+        "fix": "Chỉnh sửa",
+        "password": "Mật khẩu",
+        "c_password": "Xác nhận mật khẩu",
+        "remember_me": "Nhớ mật khẩu",
+        "forgot_password": "Quên mật khẩu",
+        "update_profile": "Cập nhật tài khoản",
+        "schedule":"Lịch giảng dạy",
+        "detail": "Giới thiệu",
+        "agree": "Đồng ý",
+        "undefined": "Không xác định"
     },
     "message": {
         "welcome": "Xin chào",
         "goodbye": "Cảm ơn bạn đã dùng sản phẩm của chúng tôi. Hẹn gặp lại",
         "welcome_member": "Bạn đã trở thành thành viên của cộng đồng Sagasuy",
+        "check_password": "Vui lòng kiểm tra lại mật khẩu",
         "error": "Có lỗi đang xảy ra. Vui lòng kiểm tra lại thông tin hoặc chờ trong giây lát",
         "created_ok": "Đã tạo mới thành công",
         "updated_ok": "Đã cập nhật lại thông tin",
         "deleted_ok": "Xóa thành công"
+    },
+    "show": {
+        "comment": "Xem đánh giá"
     }
 }
