update forgot password and admin

--- a/src/locales/jp/translation.json
+++ b/src/locales/jp/translation.json
@@ -6,7 +6,7 @@
         "logout":"ログアウト",
         "japanese": "日本語",
         "vietnamese": "ベトナム語",
-        "tutor": "家庭教師",
+        "teacher": "家庭教師",
         "from": "から",
         "to": "まで",
         "name": "名前",
