--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -6,7 +6,7 @@
         "logout": "Thoát",
         "japanese": "Tiếng Nhật",
         "vietnamese": "Tiếng Việt",
-        "tutor": "Gia sư",
+        "teacher": "Gia sư",
         "from": "Từ",
         "to": "Tới",
         "name": "Tên",
