--- a/src/locales/jp/translation.json
+++ b/src/locales/jp/translation.json
@@ -57,7 +57,7 @@
         "c_password": "パースワード確認",
         "remember_me": "ユーザーの状態を維持する",
         "forgot_password": "パースワードを忘れ",
-        "update_profile": "プロフィールを更新",
+        "update_profile": "完了​",
         "schedule":"スケジュール",
         "detail": "紹介",
         "agree": "同意",
