add scheduler filters

--- a/src/locales/jp/translation.json
+++ b/src/locales/jp/translation.json
@@ -43,7 +43,7 @@
         "slider_note3": "家庭教師を探し始める",
         "reject_student": "家庭教師は申し出を断りました。",
         "allow_student": "家庭教師は提案に同意しました。",
-        "footer_intro": "私たちはチーちゃん会社であり、お客様に最高のサービスとテクノロジーを提供することに専念しています。",
+        "footer_intro": "私たちはSagasuy会社であり、お客様に最高のサービスとテクノロジーを提供することに専念しています。",
         "distance": "距離",
         "go_back": "戻る",
         "signup_wait": "登録進み",
