--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -43,7 +43,7 @@
         "slider_note3": "Tìm kiếm gia sư ngay thôi nào",
         "reject_student": "Gia sư đã từ chối yêu cầu của bạn",
         "allow_student": "Gia sư đồng ý yêu cầu của bạn",
-        "footer_intro": "Chúng tôi là チーちゃん, chuyên cung cấp dịch vụ, nền tảng công nghệ tốt nhất cho khách hàng.",
+        "footer_intro": "Chúng tôi là Sagasuy, chuyên cung cấp dịch vụ, nền tảng công nghệ tốt nhất cho khách hàng.",
         "distance": "Khoảng cách",
         "go_back": "Quay lại",
         "signup_wait": "Đang chờ",
